--- a/views/layouts/home/sections/about-us.ejs
+++ b/views/layouts/home/sections/about-us.ejs
@@ -1,10 +1,10 @@
 <div id="about">
-    <div class="py-16 mt-48 px-10">
+    <div class="py-16 sn:mt-16 mt-48 px-10">
       <div class="container">
         <div class="flex flex-wrap items-center">
           <div class="w-full lg:w-1/2">
-            <div class="mb-5 lg:mb-0">
-              <div class="mb-4 section-title">
+            <div class="mb-5 sm:-mt-10 lg:mb-0">
+              <div class="mb-4 sm:-mt-10 section-title">
                 <div class="line"></div>
                 <h3 class="text-4xl font-bold text-black">About<span class="font-normal"> Us</span></h3>
               </div>
