--- a/views/layouts/home/sections/collective-events.ejs
+++ b/views/layouts/home/sections/collective-events.ejs
@@ -1,5 +1,5 @@
 <!--Event page starts  -->
-<div class="my-5 md:mt-52">
+<div class="my-5 md:mt-32">
   <% if (featured.length > 0 || live.length > 0 || ongoing.length > 0 || upcoming.length > 0 || archived.length > 0) { %> 
   <!--FEATURED EVENTS-->
   <% if (featured.length > 0) { %>
@@ -12,7 +12,7 @@
         <div class="section-title text-center">
           <div class="m-auto line"></div>
           <div>
-            <h3 class="text-4xl font-bold">Featured <span class="font-normal"> Events</span></h3>
+            <h3 class="text-4xl font-bold sm:mt-18">Featured <span class="font-normal"> Events</span></h3>
           </div>
         </div>
       </div>
