--- a/views/layouts/home/sections/home-about-us.ejs
+++ b/views/layouts/home/sections/home-about-us.ejs
@@ -1,8 +1,8 @@
-<section id="about" class="relative pt-24 lg:pt-10 xl:pt-20 2xl:pt-48 about-area">
+<section id="about" class="relative pt-24 mt-20 md:mt-16 lg:mt-10 xl:mt-10 2xl:mt-10 lg:pt-5 xl:pt-10 2xl:pt-24 about-area">
   <div class="container">
     <div class="row items-center">
       <div class="w-full lg:w-1/2">
-        <div class="mx-4 mt-12 about-content wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+        <div class="mx-4 mt-12 md:mt-20 about-content wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
           <div class="mb-4 section-title">
             <div class="line"></div>
             <h3 class="text-4xl font-bold">About<span class="font-normal"> Us</span></h3>
