--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -155,7 +155,7 @@
               <div class="w-full font-bold text-xl text-gray-600 px-6">Front End Team</div>
             </a>
           </div>
-          <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+          <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
               <a href="https://www.instagram.com/_i_abhi.nav/"
                 class="text-gray-600 text-lg md:text-md mr-6 hover:text-pink-500 duration-200"><i
@@ -164,6 +164,14 @@
                 class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i
                   class="fab text-4xl fa-linkedin-in"></i></a>
             </div>
+            <div class="flex  justify-center ">
+              <div
+                class="pill bg-gray-200 text-gray-800 font-medium rounded-full px-4 text-xl mr-2 my-2 py-2"
+              >
+                #HTMLCSSEXPERT
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -178,7 +186,7 @@
               <div class="w-full font-bold text-center text-xl text-gray-600 px-6">Back End Team</div>
             </a>
           </div>
-          <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+          <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
               <a href="https://github.com/Manbir-ss"
                 class="text-gray-600 text-lg md:text-md hover:text-gray-900 duration-200"><i
@@ -190,6 +198,14 @@
                 class="text-gray-600 text-lg md:text-md hover:text-blue-500 duration-200"><i
                   class="fab text-4xl fa-linkedin-in"></i></a>
             </div>
+            <div class="flex  justify-center ">
+              <div
+                class="pill bg-gray-200 text-gray-800 font-medium rounded-full px-4 text-xl mr-2 my-2 py-2"
+              >
+                #JSONMANAGER
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -205,7 +221,7 @@
               <div class="w-full font-bold text-center text-xl text-gray-600 px-6">Front End Team</div>
             </a>
           </div>
-          <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+          <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
               <a href="https://www.facebook.com/profile.php?id=100015425195332" href=""
                 class="text-gray-600 text-lg md:text-md hover:text-blue-800 duration-200"><i
@@ -217,6 +233,14 @@
                 class="text-gray-600 text-lg md:text-md hover:text-blue-500 duration-200"><i
                   class="fab text-4xl fa-linkedin-in"></i></a>
             </div>
+            <div class="flex  justify-center ">
+              <div
+                class="pill bg-gray-200 text-gray-800 font-medium rounded-full px-4 text-xl mr-2 my-2 py-2"
+              >
+                #DESIGNANDLAYOUTEXPERT
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -233,7 +257,7 @@
               <div class="w-full font-bold  text-xl text-center text-gray-600 px-6">Front End Team</div>
             </a>
           </div>
-          <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+          <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
               <a href="https://www.facebook.com/sejalmadan21"
                 class="text-gray-600 text-lg md:text-md hover:text-blue-800 duration-200"><i
@@ -245,6 +269,14 @@
                 class="text-gray-600 text-lg md:text-md hover:text-blue-500 duration-200"><i
                   class="fab text-4xl fa-linkedin-in"></i></a>
             </div>
+            <div class="flex  justify-center ">
+              <div
+                class="pill bg-gray-200 text-gray-800 font-medium rounded-full px-4 text-xl mr-2 my-2 py-2"
+              >
+                #COLORSCHEMEEXPERT
+              </div>
+            </div>
+
           </div>
         </div>
         
@@ -262,7 +294,7 @@
               <div class="w-full font-bold text-xl text-center text-gray-600 px-6">Front End Team</div>
             </a>
           </div>
-          <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+          <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
               <a href="https://www.instagram.com/_vanshika__.15/"
                 class="text-gray-600 text-lg md:text-md mr-6 hover:text-pink-500 duration-200"><i
@@ -271,6 +303,14 @@
                 class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i
                   class="fab text-4xl fa-linkedin-in"></i></a>
             </div>
+            <div class="flex  justify-center ">
+              <div
+                class="pill bg-gray-200 text-gray-800 font-medium rounded-full px-4 text-xl mr-2 my-2 py-2"
+              >
+                #CONTENTMANAGER
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -286,7 +326,7 @@
               <div class="w-full font-bold text-center text-xl text-gray-600 px-6">Back End Team</div>
             </a>
           </div>
-          <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+          <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
               <a href=" https://www.instagram.com/ekam.s_/" class="text-gray-600 text-lg md:text-md mr-6"><i
                   class="fab text-4xl fa-instagram hover:text-pink-500 duration-200"></i></a>
@@ -294,6 +334,14 @@
                 class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i
                   class="fab text-4xl fa-linkedin-in"></i></a>
             </div>
+            <div class="flex  justify-center ">
+              <div
+                class="pill bg-gray-200 text-gray-800 font-medium rounded-full px-4 text-xl mr-2 my-2 py-2"
+              >
+                #FORMTESTER
+              </div>
+            </div>
+
           </div>
         </div>
         
