--- a/views/layouts/home/sections/footer-links.ejs
+++ b/views/layouts/home/sections/footer-links.ejs
@@ -44,7 +44,7 @@
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
                 <a href="javascript:void(0)">Terms of Service</a>
               </li>
-              <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
+              <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
                   href="/staff-login">Login</a></li>
                   <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
                     href="/credits">Credits</a></li>
@@ -70,8 +70,11 @@
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
                 <a href="javascript:void(0)">FAQ</a>
               </li>
-              <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
+              <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
                   href="/">Contact</a></li>
+              <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
+                  href="https://github.com/LastComrade/Events-based-organizational-website">Github Repo</a></li>
+  
             </ul>
           </div>
         </div>
