final bug fixing part 2

--- a/views/layouts/home/sections/header-nav.ejs
+++ b/views/layouts/home/sections/header-nav.ejs
@@ -15,7 +15,7 @@
             </button>
             <% if(title === "E-Cell | Home") { %> 
               <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -45,7 +45,7 @@
             </div>
             <% } else if(title === "E-Cell | Credits") { %> 
               <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -73,7 +73,7 @@
             <!-- Live Events -->
             <% } else if(title === "E-Cell | Live Events") { %> 
               <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -105,7 +105,7 @@
             <!-- upcoming events -->
             <% } else if(title === "E-Cell | Upcoming Events") { %> 
               <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -136,7 +136,7 @@
             <!-- ongoing events -->
             <% } else if(title === "E-Cell | Ongoing Events") { %> 
               <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -166,7 +166,7 @@
             </div>
             <% } else if(title === "E-Cell | Archived Events") { %> 
               <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -196,7 +196,7 @@
             </div>
             <% } else if(title === "E-Cell | Events") { %>
               <div
-                class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+                class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
                 id="navbarOne">
                 <ul id="nav"
                   class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -236,7 +236,7 @@
               </div>
             <% } else if (title.length > "E-Cell | Events".length && title.substring(0, 15) === "E-Cell | Events") { %>
             <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -266,7 +266,7 @@
             </div>
             <% } else if (title === "E-Cell | Departments") { %>
               <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="text-white items-center mr-auto lg:justify-end relative inline-block capitalize duration-300 lg:flex">
@@ -294,7 +294,7 @@
             </div>
             <% } else if (title.length > "E-Cell | Departments".length && title.substring(0, 20) === "E-Cell | Departments") { %>
             <div
-              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              class="absolute mt-60 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
               id="navbarOne">
               <ul id="nav"
                 class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
@@ -470,7 +470,7 @@
               <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                 data-wow-delay="0.5s"><%= foundDept.name %></h2>
               <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                <%= foundDept.tagline %>
+                "<%= foundDept.tagline %>"
               </p>
               <a href="#about"
                 class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
