--- a/views/layouts/home/sections/suggest-event.ejs
+++ b/views/layouts/home/sections/suggest-event.ejs
@@ -13,10 +13,10 @@
       <div id="suggest" class="mt-8 subscribe-form">
         <form class="relative focus:outline-none space-y-5">
           <input type="text"
-            class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
+            class="w-full relative py-4 pl-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
             id="name" name="name" placeholder="Your Name">
           <input type="email" name="email" placeholder="Enter email"
-            class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
+            class="w-full relative py-4 pl-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
           <textarea name="description"
             class="w-full h-44 resize-none relative py-4 px-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
             id="description" maxlength="200" placeholder="We would love to know, what's in your mind"></textarea>
