--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -1,10 +1,10 @@
-<div id="team" class="container px-4 md:px-0 max-w-6xl mx-auto mt-20 z-50">
+<div id="team" class="container px-4 md:px-0 max-w-6xl mx-auto mt-32 z-50">
   <div class="mx-0 sm:mx-6">
     <div class=" w-full text-xl md:text-2xl text-gray-800 leading-normal rounded-lg">
 
       <!-- Lead Card-->
       <!-- Konark -->
-      <div class="flex flex-col justify-center items-center max-w-sm mx-auto mt-8">
+      <div class="flex flex-col justify-center items-center max-w-sm mx-auto mt-12">
         <div class="mb-4 section-title">
           <!-- <div class="line"></div> -->
           <h3 class="text-4xl font-bold  w-full text-center border-t-4 border-red-400 pt-4 text-black ">Team Leader</h3>
@@ -149,7 +149,7 @@
           <div class="flex-1 text-center bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
             <a class="flex flex-wrap no-underline hover:no-underline">
               <img
-                src="https://media-exp1.licdn.com/dms/image/C5603AQFew4zuA10sTA/profile-displayphoto-shrink_400_400/0/1627493885642?e=1632960000&v=beta&t=6iM9WhgyKZP0YaqX09UZVEe0qfnX3-MHAoUP9-IVXks"
+                src="https://media-exp1.licdn.com/dms/image/C5603AQFIjbuPUIB3Xw/profile-displayphoto-shrink_800_800/0/1627738237719?e=1632960000&v=beta&t=-5_0hugmFWYvYqPdeK220yXw216gFWR9wkXgwaA3urQ"
                 class="h-72 w-full rounded-t pb-6">
               <p class="uppercase w-full text-black text-lg md:text-md px-6">KUMAR ABHINAV</p>
               <div class="w-full font-bold text-xl text-gray-600 px-6">Front End Team</div>
@@ -157,8 +157,11 @@
           </div>
           <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
+              <a href="https://github.com/geekabhinav007"
+                class="text-gray-600 text-lg md:text-md hover:text-gray-900 duration-200"><i
+                  class="fab text-4xl fa-github-square"></i></a>
               <a href="https://www.instagram.com/_i_abhi.nav/"
-                class="text-gray-600 text-lg md:text-md mr-6 hover:text-pink-500 duration-200"><i
+                class="text-gray-600 text-lg md:text-md mx-12 hover:text-pink-500 duration-200"><i
                   class="fab text-4xl fa-instagram"></i></a>
               <a href="http://www.linkedin.com/in/kumar-abhinav-596b27188"
                 class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i
@@ -280,8 +283,6 @@
           </div>
         </div>
         
-
-
         <!-- vanshika -->
         <!-- 1/3 col -->
         <div class="w-full md:w-1/3 h-2/3 p-6 flex flex-col flex-grow flex-shrink cursor-pointer">
@@ -344,7 +345,38 @@
 
           </div>
         </div>
-        
+
+        <!-- Akhil -->
+        <!-- 1/3 col -->
+        <div class="w-1/3 h-2/3 p-6 flex flex-col flex-start cursor-pointer">
+          <div class="flex-1 bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
+            <a class="flex flex-wrap no-underline hover:no-underline">
+              <img
+                src="/img/akhil_kalsi.jpg"
+                class="h-72 w-full rounded-t pb-6">
+              <p class="uppercase w-full text-center text-black text-lg md:text-md px-6">Akhil Kalsi</p>
+              <div class="w-full font-bold text-center text-xl text-gray-600 px-6">Front End Team</div>
+            </a>
+          </div>
+          <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+            <div class="flex items-center justify-center">
+              <a href="https://www.instagram.com/akhistic_19/" class="text-gray-600 text-lg md:text-md mr-6"><i
+                  class="fab text-4xl fa-instagram hover:text-pink-500 duration-200"></i></a>
+              <a href="https://www.linkedin.com/in/akhil-kalsi-164b96212"
+                class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i
+                  class="fab text-4xl fa-linkedin-in"></i></a>
+            </div>
+            <div class="flex  justify-center ">
+              <div
+                class="pill bg-gray-200 text-gray-800 font-medium rounded-full px-4 text-xl mr-2 my-2 py-2"
+              >
+                #TESTER
+              </div>
+            </div>
+
+          </div>
+        </div>
+
       </div>
 
     </div>
