--- a/views/layouts/home/sections/magazine-form.ejs
+++ b/views/layouts/home/sections/magazine-form.ejs
@@ -13,7 +13,7 @@ data-wow-duration="1s" data-wow-delay="0.5s">
     <div class="mt-12 subscribe-form">
       <form class="relative focus:outline-none">
         <input type="email" name="email" placeholder="Enter email"
-          class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
+          class="w-full relative py-4 pl-6 sm:pr-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
         <button
           type="submit"
           class="inline-block absolute right-0 px-5 font-semibold text-white duration-200 rounded-r hover:shadow-xl h-full bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 overflow-hidden">Subscribe</button>
