--- a/views/layouts/home/sections/internship-form.ejs
+++ b/views/layouts/home/sections/internship-form.ejs
@@ -23,7 +23,7 @@
               
               <!-- <svg class="w-full h-2 absolute top-0 right-0 m-4 pointer-events-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 200"><path d="M206 171.144L42.678 7.822c-9.763-9.763-25.592-9.763-35.355 0-9.763 9.764-9.763 25.592 0 35.355l181 181c4.88 4.882 11.279 7.323 17.677 7.323s12.796-2.441 17.678-7.322l181-181c9.763-9.764 9.763-25.592 0-35.355-9.763-9.763-25.592-9.763-35.355 0L206 171.144z" fill="#648299" fill-rule="nonzero"/></svg> -->
               <select class="w-1/2 mr-2 border border-gray-300 rounded text-gray-600 h-10 pl-3 pr-8 bg-white hover:border-red-400 focus:outline-none" name="preferred_dept_1">
-                <option selected disabled hidden>1st preferred Dept</option>
+                <option selected disabled hidden>1st Preferred Department</option>
                 <option value="none">No Preference</option>
                 <option value="technical department">Technical Department</option>
                 <option value="analytical research department">Analytical Research Department</option>
@@ -37,7 +37,7 @@
               </select>
 
               <select class="w-1/2 border border-gray-300 rounded text-gray-600 h-10 pl-3 pr-8 bg-white hover:border-red-400 focus:outline-none" name="preferred_dept_2">
-                <option selected disabled hidden>2nd preferred Dept</option>
+                <option selected disabled hidden>2nd Preferred Department</option>
                 <option value="none">No Preference</option>
                 <option value="technical department">Technical Department</option>
                 <option value="analytical research department">Analytical Research Department</option>
@@ -50,7 +50,10 @@
                 <option value="strategic planning department">Strategic Planning Department</option>
               </select>
             </div>
-          <textarea name="description"
+            <div class="px-3">
+              <span class="text-xs text-red-400">You can submit the application even if you don't have any preferred department</span>
+            </div>
+            <textarea name="description"
             class="w-full h-44 resize-none relative py-4 px-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
             id="description" maxlength="200" placeholder="Why you want to join E-cell?"></textarea>
           <button
