Favicon added in other parts of the website

--- a/views/layouts/auth/partials/links.ejs
+++ b/views/layouts/auth/partials/links.ejs
@@ -1,3 +1,5 @@
+<link rel="icon" href="img/favicon.png" type="image/gif" sizes="16x16">
+
 <!-- Custome CSS Styles -->
 <link rel="stylesheet" href="/css/custom.css">
 
