--- a/views/layouts/dashboard/sections/head.ejs
+++ b/views/layouts/dashboard/sections/head.ejs
@@ -6,6 +6,7 @@
 </title>
 <meta name="description" content="description here">
 <meta name="keywords" content="keywords,here">
+<link rel="icon" href="img/favicon.png" type="image/gif" sizes="16x16">
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
