Dark mode removed for dashboard

--- a/views/layouts/dashboard/sections/head.ejs
+++ b/views/layouts/dashboard/sections/head.ejs
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-<link href="/css/styles.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <link href="/css/tingle.css" rel="stylesheet">
 <link href="/dashboard-styles.css" rel="stylesheet">
 
