--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -149,7 +149,7 @@
           <div class="flex-1 text-center bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
             <a class="flex flex-wrap no-underline hover:no-underline">
               <img
-                src="https://media-exp1.licdn.com/dms/image/C5603AQFew4zuA10sTA/profile-displayphoto-shrink_400_400/0/1627493885642?e=1632960000&v=beta&t=6iM9WhgyKZP0YaqX09UZVEe0qfnX3-MHAoUP9-IVXks"
+                src="https://media-exp1.licdn.com/dms/image/C5603AQFIjbuPUIB3Xw/profile-displayphoto-shrink_400_400/0/1627738237719?e=1635379200&v=beta&t=7x5eJztkvj3aw5epvqbY0u0qvnQSMFM8EjdNSqJ1840"
                 class="h-72 w-full rounded-t pb-6">
               <p class="uppercase w-full text-black text-lg md:text-md px-6">KUMAR ABHINAV</p>
               <div class="w-full font-bold text-xl text-gray-600 px-6">Front End Team</div>
@@ -157,11 +157,14 @@
           </div>
           <div class="h-32 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-center">
+              <a href="https://github.com/geekabhinav007"
+                class="text-gray-600 text-lg md:text-md hover:text-gray-900 duration-200"><i
+                  class="fab text-4xl fa-github-square"></i></a>
               <a href="https://www.instagram.com/_i_abhi.nav/"
-                class="text-gray-600 text-lg md:text-md mr-6 hover:text-pink-500 duration-200"><i
+                class="text-gray-600 text-lg md:text-md mx-12 hover:text-pink-500 duration-200"><i
                   class="fab text-4xl fa-instagram"></i></a>
               <a href="http://www.linkedin.com/in/kumar-abhinav-596b27188"
-                class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i
+                class="text-gray-600 text-lg md:text-md hover:text-blue-500 duration-200"><i
                   class="fab text-4xl fa-linkedin-in"></i></a>
             </div>
             <div class="flex  justify-center ">
